# hermes-feishu-streaming-card

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  README-install.md  README.en.md  README.md  README_en.md  TODO.md  config.yaml.example  docker-compose.example.yml  install-docker.sh  install.ps1  install.sh  installer.py  installer_v2.py  package-lock.json  pyproject.toml  setup.sh
docs/: architecture.en.md  architecture.md  e2e-verification.en.md  e2e-verification.md  event-protocol.en.md  event-protocol.md  installer-safety.en.md  installer-safety.md  migration.en.md  migration.md  release-notes-v3.6.1.md  release-notes-v3.6.4.md  release-notes-v3.6.5.md  release-notes-v3.8.2.md  release-notes-v3.9.0.md  release-notes-v3.9.1.md  release-notes-v4.0.1.en.md  release-notes-v4.0.1.md  release-notes-v4.0.10.en.md  release-notes-v4.0.10.md  release-notes-v4.0.11.en.md  release-notes-v4.0.11.md  release-notes-v4.0.5.en.md  release-notes-v4.0.5.md  release-notes-v4.0.9.en.md  release-notes-v4.0.9.md  release-readiness.en.md  release-readiness.md  testing.en.md  testing.md  user-guide.en.md  user-guide.md
hermes_feishu_card/: bots.py  card_timeline.py  cli.py  config.py  diagnostics.py  events.py  feishu_client.py  flush.py  hook_runtime.py  lifecycle.py  metrics.py  operations.py  operations_transport.py  process.py  render.py  runner.py  server.py  session.py  text.py  utils.py
legacy/: README.md
patch/: feishu_patch.py  run_patch.py
scripts/: auto_progress.py  send_progress.py
sidecar/: cardkit_client.py  config.py
tools/: __init__.py  generate_e2e_preview.py
(+49 files in other folders)
