[project]
name = "hermes-feishu-streaming-card"
version = "0.1.0"
description = "Hermes Gateway Feishu streaming card sidecar plugin"
requires-python = ">=3.9"
dependencies = [
  "aiohttp>=3.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
hermes-feishu-card = "hermes_feishu_card.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
